--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.0.1"
+    "mongoose": "^5.0.1",
+    "stripe": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.4"
